--- a/src/app/joborders/joborders.component.html
+++ b/src/app/joborders/joborders.component.html
@@ -46,12 +46,12 @@
                     </p>
                     <p>{{ t.des }}</p>
                     <strong style="font-size: 15px;padding: 10px;border-right: 2px solid rgb(215, 227, 248);color:gray;">
-                        <i style="font-size: 20px;" class="fas fa-briefcase"></i>One-time order  
+                        <i style="font-size: 20px;padding: 10px;" class="fas fa-briefcase"></i>One-time order  
                     </strong>
                     <strong style="font-size: 15px;padding: 10px;border-right: 2px solid rgb(215, 227, 248);color:gray;">
-                        <i style="font-size: 20px;" class="far fa-clock"></i>Yesterday  
+                        <i style="font-size: 20px;padding: 10px;" class="far fa-clock"></i>Yesterday  
                     </strong>
-                    <strong style="font-size: 15px;padding: 10px;color:gray;"><i style="font-size: 20px;" class=" fas fa-calendar-alt"></i> {{t.date}} </strong>
+                    <strong style="font-size: 15px;padding: 10px;color:gray;"><i style="font-size: 20px;padding: 10px;" class=" fas fa-calendar-alt"></i> {{t.date}} </strong>
                     <button class="btn btn-default text-primary" style="float: right;border: 1px solid gray;" (click)="onClick(t)">Open</button>
                   </td>
                 </tr>
