--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -28,8 +28,8 @@ Registered on the site 8 months
 </div>
 
 <div style="display: flex;padding:20px;margin-left: 200px;">
-    <button class="btn btn-default " style="border: 1px solid gray;padding: 10px;"><i class="fas fa-arrow-left"></i> All orders</button>
-   &nbsp; <button class="btn btn-success"><i class="fas fa-arrow-right"></i> Apply for a job</button>
+    <button class="btn btn-default " style="border: 1px solid gray;padding: 10px;" (click)="jobOrders()"><i class="fas fa-arrow-left"></i>All orders</button>
+   &nbsp; <button class="btn btn-success" (click)="SignContract()"><i class="fas fa-arrow-right"></i>Apply for a job</button>
 </div>
 </div>
 
