--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -34,19 +34,19 @@
   
           <h3>About US</h3>
   
-          Freelancini Tunisie est la deuxieme plateforme de Freelance en Tunisie
+          Freelancini Tunisie is the second Freelance platform in Tunisia
   
-          Mettant en contact les Freelances et les donneurs d'ordre.
+          Putting in contact with Freelancers and principals.
          
-          Notre but est d'attirer les donneurs d'ordre et les entreprises 
+          Our goal is to attract principals and companies 
   
-          afin qu'ils postent leurs missionsEt qu'ils trouvent 
+          so they post their missions 
   
-          les Freelances qui leurs conviennent.
+          freelancer that suit them.
   
-          Nous sélectionnons les vrais des fausses annonces.
+          We select the real fake ads.
   
-          Le Freelance aura une large gamme de missions.
+          Freelance will have a wide range of missions.
           </pre>
       </div>
   
