--- a/src/app/add-orders/add-orders.component.html
+++ b/src/app/add-orders/add-orders.component.html
@@ -6,7 +6,7 @@
 <div class="form-row">
 <div class="col-md-4 mb-3">
 <label for="title">Title</label>
-<input type="text" class="form-control" id="title, title" name="title" [(ngModel)]="title" placeholder="What need to do ? "
+<input type="text" class="form-control" id="title" name="title" [(ngModel)]="title" placeholder="What need to do ? "
   required #titre="ngModel">
   <div *ngIf="titre.invalid && titre.touched" class="alert alert-danger">Required field</div>
 
