--- a/src/app/add-orders/add-orders.component.html
+++ b/src/app/add-orders/add-orders.component.html
@@ -136,6 +136,7 @@ You must agree before submitting.
     </div>
   </div>
 </div>
+<input id="time" name="time" type="hidden"/>
 </form></div>
 <!-- [disabled]="f.invalid"-->
 
