--- a/src/app/add-orders/add-orders.component.css
+++ b/src/app/add-orders/add-orders.component.css
@@ -91,3 +91,6 @@
 :host ::ng-deep .custom-toast .ui-toast-message.ui-toast-message-info .ui-toast-close-icon {
     color: #ffffff;
 }
+p-calendar{
+  
+}
