--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,5 +1,8 @@
 <div class="miao">
-<div class="container">
+	<div>     
+		<p-messages [style]="{'margin-left':'50px','width': '300px','float':'left'}" [value]="msgs"></p-messages>
+	 </div>
+	<div class="container">
 	<div class="d-flex justify-content-end h-100">
 		<div class="card">
 			<div class="card-header">
@@ -15,23 +18,37 @@
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-user"></i></span>
-						</div>
-						<input type="text" class="form-control" name="user" [(ngModel)]="user" placeholder="username*">
+						</div><br>
+						<input type="text" class="form-control" name="user" [(ngModel)]="user" placeholder="username*" #usr="ngModel" required>
 						
 					</div>
+					<div [hidden]="!usr.errors?.required || usr.pristine"
+           					 class="alert alert-danger">
+         					   the username is required
+            </div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-envelope"></i></span>
 						</div>
-						<input type="text" class="form-control" name="address" [(ngModel)]="address" placeholder="e-mail adresse*">
+						<input type="text" class="form-control" name="address" [(ngModel)]="address" placeholder="e-mail adresse*" #ml="ngModel" required pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
 						
 					</div>
+					<div [hidden]="!ml.errors?.required || ml.pristine"
+            class="alert alert-danger">
+            Email is required
+            </div>
+            <div *ngIf="ml.errors?.pattern" class="alert alert-danger">
+            invalid pattern  </div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
 							<span class="input-group-text"><i class="fas fa-key"></i></span>
 						</div>
-						<input type="password" class="form-control" name="password" [(ngModel)]="password" placeholder="password*">
+						<input type="password" class="form-control" name="password" [(ngModel)]="password" placeholder="password*" #psd="ngModel" required>
 					</div>
+					<div [hidden]="!psd.errors?.required || psd.pristine"
+            class="alert alert-danger">
+            password is required
+            </div>
 					<div > 
 						<input type="radio" id="Freelancer" name="bt" value="freelancer" ngModel>
 						<label for="Freelancer" class="text-white"> Freelancer</label>
@@ -44,7 +61,7 @@
 						<p class="text-danger">All fields are required(*).</p>
 					</div>
 					<div class="form-group">						
-						<button type="submit" class="btn btn-danger btn float-left logup_btn">Sign up </button>
+						<button type="submit" [disabled]="f.invalid" class="btn btn-danger btn float-left logup_btn">Sign up </button>
 					</div>
 				</form>
 			</div>
