--- a/src/app/workers/workers.component.html
+++ b/src/app/workers/workers.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
       <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+       <!--<nav class="col-md-2 d-none d-md-block bg-light sidebar">
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
               <li class="nav-item">
@@ -74,9 +74,9 @@
               </li>
             </ul>
           </div>
-        </nav>
+        </nav>-->
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+         <!--<main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">-->
        
 
         
@@ -88,7 +88,7 @@
               <thead>
                 <tr>
                   <th>Name</th>
-                  <th>Title</th>
+                  <th>Address</th>
                   
                   <th>Details</th>
                  
@@ -97,7 +97,7 @@
                 <tr *ngFor="let i of users | async">
                     <!--<ng-container *ngIf="i.spec=='freelancer'" >-->
                     <td>{{i.user}}</td>
-                    <td>{{i.role}}</td>
+                    <td>{{i.address}}</td>
                     
                     <td>
                         <a [routerLink]="[i.user]"><button class="btn btn-primary" >Details</button></a>
@@ -111,6 +111,6 @@
               </tbody>
             </table>
           </div>
-        </main>
+       <!-- </main>-->
       </div>
     </div>
